k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
